k8s-example/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rkllama
  labels:
    app: rkllama
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: rkllama
